<resources>
    <string name="app_name">Movie Streaming</string>
    <string name="genre">ژاندر</string>
    <string name="topMovie">فیلم های برتر</string>
    <string name="more">مشاهده همه</string>
    <string name="topSeries">سریال های برتر</string>
    <string name="todo">TODO</string>
    <string name="watchMovie">مشاهده فیلم</string>
    <string name="moviesStatics">آمار فیلم ها</string>
    <string name="copyWrite">تمامی حقوق مادی و معنوی متعلق به Movie Streaming می‌باشد</string>
    <string name="Movie">فیلم</string>
    <string name="static_movie_num">24</string>
    <string name="series">سریال</string>
    <string name="static_series_num">41</string>
    <string name="animation">انیمیشن</string>
    <string name="static_animation_num">12</string>
    <string name="Director">کارگردان :</string>
    <string name="gotoapp">برو به برنامه</string>
    <string name="more_details">جزئیات</string>
    <string name="today_suggestion_movie">فیلم پیشنهادی امروز</string>
    <string name="today_suggestion_series">سریال پیشنهادی امروز</string>
    <string name="cast">بازیگران</string>
    <string name="releated_movie">فیلم های مرتبط</string>
    <string name="register">ثبت نام</string>
    <string name="full_name">نام و نام خانوادگی</string>
    <string name="sign_up_description">دسترسی به بهترین فیلم های دنیا</string>
    <string name="enter_email_address">آدرس ایمیل خود را وارد کنید (اختیاری)</string>
    <string name="enter_phone">شماره موبایل خود را وارد کنید</string>
    <string name="enter_pass">رمز عبور خود را وارد کنید</string>
    <string name="enter_pass_again">رمز عبور را دوباره وارد کنید</string>
    <string name="already_registered">قبلا ثبت نام کرده ام</string>
    <string name="forget_password">فراموشی رمز عبور</string>
    <string name="login">ورود</string>
    <string name="gotoSignUp">ایجاد حساب کاربری</string>
    <string name="send">ارسال</string>
    <string name="back">بازگشت</string>
    <string name="conform">تایید</string>
    <string name="send_sms_to">ارسال پیامک تایید به شماره مبایل :</string>


</resources>