<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warm_gray_900">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_h"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="273dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <TextView
                android:id="@+id/tv_forgetPass_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_description"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_forgetPass_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/guideline_vr"
                app:layout_constraintStart_toStartOf="@id/guideline_vl"
                app:layout_constraintTop_toBottomOf="@id/guideline_h">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_forgetPass_phone"
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone"
                    android:nextFocusDown="@id/btn_forgetPass_send"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:endIconMode="clear_text"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_baseline_phone__24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_forgetPass_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLength="11"
                        android:textColor="@color/text_white"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_forgetPass_send"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:backgroundTint="@color/yellow_500"
                    android:text="@string/send"
                    android:textColor="@color/text_black"
                    app:cornerRadius="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_forgetPass_phone"
                    app:rippleColor="@color/yellow_200" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_forgetPass_gotoSignIn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/yellow_500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/btn_forgetPass_send"
                    app:layout_constraintTop_toBottomOf="@id/btn_forgetPass_send" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_forgetPass_gotoSignUp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/yellow_500"
                    app:layout_constraintEnd_toStartOf="@id/btn_forgetPass_send"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_forgetPass_send" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:elevation="-2dp"
        android:scaleType="fitXY"
        android:src="@drawable/register" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:elevation="-2dp"
        android:src="@drawable/bg_tab_layout" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:elevation="-2dp"
        android:src="@drawable/bg_appbar" />


</androidx.constraintlayout.widget.ConstraintLayout>