<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warm_gray_900">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_title"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_h"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />


            <TextView
                android:id="@+id/tv_signUp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_description"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signUp_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@id/guideline_vr"
                app:layout_constraintStart_toStartOf="@id/guideline_vl"
                app:layout_constraintTop_toBottomOf="@id/guideline_h">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_signUp_name"
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name"
                    android:nextFocusUp="@id/til_signUp_email"
                    app:counterEnabled="true"
                    app:counterMaxLength="25"
                    app:endIconMode="clear_text"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_round_person_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signUp_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="@color/text_white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_signUp_email"
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email_address"
                    android:nextFocusDown="@id/til_signUp_phone"
                    app:endIconMode="clear_text"
                    app:layout_constraintTop_toBottomOf="@id/til_signUp_name"
                    app:startIconDrawable="@drawable/ic_baseline_email_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signUp_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:singleLine="true"
                        android:textColor="@color/text_white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_signUp_phone"
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone"
                    android:nextFocusDown="@id/til_signUp_password"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:endIconMode="clear_text"
                    app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
                    app:layout_constraintTop_toBottomOf="@id/til_signUp_email"
                    app:startIconDrawable="@drawable/ic_baseline_phone__24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signUp_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:inputType="phone"
                        android:lines="1"
                        android:maxLength="11"
                        android:textColor="@color/text_white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_signUp_password"
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_pass"
                    android:layoutDirection="rtl"
                    android:nextFocusDown="@id/til_signUp_password_r"
                    app:endIconMode="password_toggle"
                    app:errorIconDrawable="@null"
                    app:layout_constraintTop_toBottomOf="@id/til_signUp_phone"
                    app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signUp_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:textColor="@color/text_white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/_10ssp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_signUp_password_r"
                    style="@style/MyTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_pass_again"
                    android:nextFocusUp="@id/btn_signUp"
                    app:endIconMode="password_toggle"
                    app:errorIconDrawable="@null"
                    app:layout_constraintTop_toBottomOf="@id/til_signUp_password"
                    app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_signUp_password_r"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:textColor="@color/text_white"
                        android:textCursorDrawable="@null"
                        android:textSize="@dimen/_10ssp"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUp"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:backgroundTint="@color/yellow_500"
                    android:text="@string/register"
                    android:textColor="@color/text_black"
                    app:cornerRadius="@dimen/_12sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/til_signUp_password_r"
                    app:rippleColor="@color/yellow_200" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_signUp_gotoSignIn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_registered"
                    android:textColor="@color/yellow_500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/til_signUp_password_r" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:elevation="-2dp"
        android:scaleType="fitXY"
        android:src="@drawable/register" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:elevation="-2dp"
        android:src="@drawable/bg_tab_layout" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/todo"
        android:elevation="-2dp"
        android:src="@drawable/bg_appbar" />


</androidx.constraintlayout.widget.ConstraintLayout>